views css issue, overflow:scroll.

--- a/public/css/pages/groceries.css
+++ b/public/css/pages/groceries.css
@@ -27,6 +27,7 @@ form {
   margin-top: 3rem; 
 }
 fieldset {
+  background-color: olive;
   width: 80%;
   border-radius: .25em;
   text-align: center;
