--- a/public/css/pages/hardware.css
+++ b/public/css/pages/hardware.css
@@ -34,6 +34,7 @@ fieldset {
   margin-bottom: 1rem;
   position: fixed;
   margin-left: 1rem;
+  background-color: darkorange;
 }
 #radioButtonsDiv {
   font-size: 0;
